SDK update + new stub

--- a/config/statement_en.html
+++ b/config/statement_en.html
@@ -119,7 +119,7 @@
       <div class="title">Game turn input</div>
       <div class="text">
         <p>First <var>HEIGHT</var> lines:</p>
-        <p><var>WIDTH</var> ints, the <var>owner</var> of the cell <b>(x, y)</b> (-2 = void, -1 = neutral, 0 = yours, 1 = theirs)</p>
+        <p><var>WIDTH</var> characters: # = void, . = neutral, O = own & active, o = own & inactive, X = active opponent cell, x = inactive opponent cell
         <p>Next line: 1 int: <var>buildingCount</var></p>
         <p>Next <var>buildingCount</var> lines:</p>
         <p>Four ints: <var>type</var> (0 = HQ, 1 = mine, 2 = tower) <var>owner</var> <var>x</var><var>y</var></p>
