--- a/config/statement_en.html
+++ b/config/statement_en.html
@@ -54,8 +54,8 @@
           <p>
               Along the game, each player will capture cells to enlarge their territory. A player territory is composed of all the cells owned by the player that are <strong>active</strong>. A cell is said to be <strong>active</strong> if and only if the cell is connected to the headquarters. That is, there exists a path from the headquarters to this cell.
           </p>
-          <figure style="margin-left:auto; margin-right:auto; width:58%;">
-              <img src="https://i.imgur.com/udipGqA.png" alt="territory-ownership" /><br/>
+          <figure style="margin-left:auto; margin-right:auto; width:350px;">
+              <img src="https://i.imgur.com/udipGqA.png" alt="territory-ownership" style="margin-left:auto; margin-right:auto; width:350px;" /><br/>
               <figcaption>Red's territory is composed of 6 cells. The 4 pink cells are cells they used to control but Green player interrupted part of this territory. They are thus inactive. By capturing the cell marked by an X, Red can make the pink cells active again.</figcaption>
           </figure>
 
@@ -139,15 +139,13 @@
 
 
             <ul>
-                <li>Each unit can be moved one time each turn. Units can only move to an neighbour cell (up, down, left, right).</li>
-                <li>Players can train armies using the <action>TRAIN level x y</action>. Armies training follow certain rules. They can be trained only on cells in player's territory or its direct neighbourhood.
-                    <ul>
-                        <li>if a cell contains a friendly unit, no unit can be trained on it</li>
-                        <li>Likewise, if a cell is protected by a tower, only a level 3 unit can be trained there</li>
-                        <li>if a cell contains an enemy unit, an unit can be trained on it only if the created unit can kill the enemy unit. For instance, if there is a level 1 unit, a player has to train a level 2 or 3 unit to train it on this cell.</li>
-                    </ul>
-                </li>
-
+                <li>Each unit can be moved once each turn. Units can only move to a neighbour cell (up, down, left, right).</li>
+                <li>Players can train armies using the <action>TRAIN level x y</action> action. They can be only trained on cells in player's territory or its direct neighbourhood (border). Armies training follows the same rules as moving: no training can be done on a cell occupied by a friendly unit/building, and the unit must be powerful enough to be trained on a cell occupied by an enemy.</li>
+                <li>All actions are processed sequentially and the game state is recomputed after each one: an action not possible at the beginning of the turn might be done later in the same turn.</li>
+                <figure style="margin-left:auto; margin-right:auto; width:500px;">
+                  <img src="https://i.imgur.com/lVTVhp9.png" alt="action-sequence-diagram" style="margin-left:auto; margin-right:auto; width:500px;" /><br/>
+              </figure>
+    
             </ul>
             <br/>
           </p>
@@ -207,12 +205,6 @@
     </h1>
     <!-- Protocol block -->
     <div class="blk">
-      <div class="text">The program must first read the initialization data from standard input. Then, provide to the
-        standard output one line with ...</div>
-    </div>
-
-    <!-- Protocol block -->
-    <div class="blk">
       <div class="title">Input</div>
       <div class="title">Initialization input</div>
       <div class="text">
@@ -221,14 +213,55 @@
 
       <div class="title">Game turn input</div>
       <div class="text">
-        <p>First <var>HEIGHT</var> lines:</p>
-        <p><var>WIDTH</var> characters: # = void, . = neutral, O = own & active, o = own & inactive, X = active opponent cell, x = inactive opponent cell
-        <p>Next line: 1 int: <var>buildingCount</var></p>
-        <p>Next <var>buildingCount</var> lines:</p>
-        <p>Four ints: <var>type</var> (0 = HQ, 1 = mine, 2 = tower) <var>owner</var> <var>x</var><var>y</var></p>
-        <p>Next line: 1 int: <var>unitCount</var></p>
-        <p>Next <var>unitCount</var> lines:</p>
-        <p>Five ints: <var>id</var> <var>owner</var> <var>level</var> <var>x</var><var>y</var></p>
+        <p><span class="statement-lineno">Line 1:</span><var>gold</var>: an int being the amount of gold the player has.</p>
+        <i>(note: need to add income and opponent gold/income)</i>
+
+        <p><span class="statement-lineno">Next <var>height</var> lines:</span>
+            <ul>
+                <li> <var>width</var> characters, the <var>owner</var> of the cell:
+                  <ul>
+                    <li><const>#</const>: void</li>
+                    <li><const>.</const>: neutral</li>
+                    <li><const>O</const>: own and active cell</li>
+                    <li><const>o</const>: own and inactive</li>
+                    <li><const>X</const>: active opponent cell</li>
+                    <li><const>x</const>: inactive opponent cell</li>
+                  </ul>
+            </ul>
+        </p>
+        <p><span class="statement-lineno">Next line:</span> <var>buildingCount</var>: the amount of buildings on the map.</p>
+        <p><span class="statement-lineno">Next <var>buildingCount</var> lines:</span> 4 ints
+            <ul>
+                <li><var>type</var>: the type of building
+                  <ul>
+                    <li><const>0</const>: HQ</li>
+                    <li><const>1</const>: Mine</li>
+                    <li><const>2</const>: Tower</li>
+                  </ul>
+                </li>
+                <li><var>owner</var>
+                  <ul>
+                    <li><const>0</const>: Owned</li>
+                    <li><const>1</const>: Enemy</li>
+                  </ul>
+                </li>
+                <li><var>x</var> and <var>y</var>: building's cell coordinates.
+            </ul>
+        </p>
+        <p><span class="statement-lineno">Next line:</span><var>unitCount</var>: the amount of units on the map.</p>
+        <p><span class="statement-lineno">Next <var>unitCount</var> lines:</span> 5 ints
+            <ul>
+              <li><var>id</var></li>
+              <li><var>owner</var>
+                  <ul>
+                      <li><const>0</const>: Owned</li>
+                      <li><const>1</const>: Enemy</li>
+                  </ul>
+              </li>
+              <li><var>level</var>: <const>1</const>, <const>2</const> or <const>3</const>.</li>
+              <li><var>x</var> and <var>y</var>: unit's cell coordinates.</li>
+            </ul>
+        </p>
       </div>
     </div>
 
@@ -236,7 +269,7 @@
     <div class="blk">
       <div class="title">Output</div>
       <div class="text">
-        <span class="statement-lineno">A single line being a combination of these commands separated by <const>;</const></span>
+        <span class="statement-lineno">A single line being a combination of these commands separated by <action>;</action></span>
         <ul>
             <li><action>MOVE id x y</action></li>
             <li><action>TRAIN level x y</action></li>
@@ -247,14 +280,11 @@
         <br>
       </div>
     </div>
-
     <!-- Protocol block -->
     <div class="blk">
       <div class="title">Constraints</div>
-      WIDTH, HEIGHT <= 15
-      <div class="text"><var>...</var> contains between 1 and 500 characters.<br>
-        <br>Allotted response time to output
-        is ≤ <const>2</const> seconds.</div>
+        <var>WIDTH</var>, <var>HEIGHT</var> <= 15 <br/>
+        Allotted response time to output is ≤ <const>50ms</const>.</div>
     </div>
   </div>
 
