Fix stub width/height separator and league statements now use the same file

--- a/config/statement_en.html
+++ b/config/statement_en.html
@@ -274,6 +274,7 @@
             <li><action>MOVE id x y</action></li>
             <li><action>TRAIN level x y</action></li>
             <li><action>BUILD {building-type} x y</action> where the building type is either <action>MINE</action> or <action>TOWER</action>.</li>
+            <li><action>WAIT</action></li>
 
         </ul>
         <span class="statement-lineno">Example</span>: "MOVE 1 2 3; TRAIN 3 3 3; BUILD MINE 0 1"<br>
