--- a/config/statement_en.html
+++ b/config/statement_en.html
@@ -232,7 +232,7 @@
         <p><span class="statement-lineno">Next line:</span> <var>buildingCount</var>: the amount of buildings on the map.</p>
         <p><span class="statement-lineno">Next <var>buildingCount</var> lines:</span> 4 ints
             <ul>
-                <li><var>type</var>: the type of building
+                <li><var>buildingType</var>: the type of building
                   <ul>
                     <li><const>0</const>: HQ</li>
                     <li><const>1</const>: Mine</li>
@@ -251,7 +251,7 @@
         <p><span class="statement-lineno">Next line:</span><var>unitCount</var>: the amount of units on the map.</p>
         <p><span class="statement-lineno">Next <var>unitCount</var> lines:</span> 5 ints
             <ul>
-              <li><var>id</var></li>
+              <li><var>unitId</var></li>
               <li><var>owner</var>
                   <ul>
                       <li><const>0</const>: Owned</li>
