Mines now cost BASE_COST + INCREMENT*nbMine, with 20 & 2 as values

--- a/config/statement_en.html
+++ b/config/statement_en.html
@@ -66,7 +66,7 @@
               <ul>
                 <li><action>MINE</action>: mines product gold each turn and are the main source of income. A mine costs (10 + 2*<var>nbMines</var>) to build. So the first costs 10, the second one 12, and so on and so forth. Mines income is always <const>+4</const>.</li>
                 <li>
-                    <action>TOWER</action>: towers protect nearby owned cells (up, down, left and right, but not diagonals). Cells protected by a tower can <strong>not</strong> be reached by units of level <const>1</const>. Likewise, the tower can only be destroyed by a level <const>2</const> or level <const>3</const> unit. A tower costs 15 gold to build.
+                    <action>TOWER</action>: towers protect nearby owned cells (up, down, left and right, but not diagonals). Cells protected by a tower can only be reached by units of level <const>3</const>. Likewise, the tower can only be destroyed by a level <const>3</const> unit. A tower costs 15 gold to build.
                     Here is a figure of a tower protection range:
                     <figure style="margin-left:auto; margin-right:auto; width:350px;">
                         <img src="https://i.imgur.com/DzcGk2J.png" alt="tower-protection" style="margin-left:auto; margin-right:auto; width:350px;" /><br/>
