Update statement according to stub change (#12)

--- a/config/statement_en.html
+++ b/config/statement_en.html
@@ -225,7 +225,9 @@
       <div class="title">Game turn input</div>
       <div class="text">
         <p><span class="statement-lineno">Line 1:</span><var>gold</var>: an int being the amount of gold the player has.</p>
-        <i>(note: need to add income and opponent gold/income)</i>
+        <p><span class="statement-lineno">Line 2:</span><var>income</var>: an int being the income the player has.</p>
+        <p><span class="statement-lineno">Line 3:</span><var>opponentGold</var>: an int being the amount of gold the opponent player has.</p>
+        <p><span class="statement-lineno">Line 4:</span><var>opponentIncome</var>: an int being the amount of gold the player has.</p>
 
         <p><span class="statement-lineno">Next <var>height</var> lines:</span>
             <ul>
