--- a/config/statement_en.html
+++ b/config/statement_en.html
@@ -105,8 +105,8 @@
 
               There are <const>3</const> levels of units and the higher the level, the stronger the unit is. When a player unit walks on a cell not owned by this player, the cell is <strong>captured</strong>. Also, when a player unit walks on a cell where another enemy unit is, the enemy unit is instantly killed (without harm to the player unit).
               <ul>
-                <li>Level <const>1</const> units can only move on empty cells, mines or headquarters, and kill level <const>1</const> units.</li>
-                <li>Level <const>2</const> units, in addition, can kill level <const>2</const> units and towers.</li>
+                <li>Level <const>1</const> units can only move on empty cells, mines or headquarters.</li>
+                <li>Level <const>2</const> units, in addition, can kill level <const>1</const> units</li>
                 <li>Level <const>3</const> units, besides, can kill any units or buildings.</li>
             </ul>
 
@@ -135,14 +135,14 @@
                 </tr>
                 <tr>
                     <th>Can kill units level</th>
+                    <td>-</td>
                     <td>1</td>
-                    <td>1, 2</td>
                     <td>1, 2, 3</td>
                 </tr>
                 <tr>
                     <th>Can destroy</th>
                     <td>Mines<br/>Headquarters</td>
-                    <td>Towers<br/>Mines<br/>Headquarters</td>
+                    <td>Mines<br/>Headquarters</td>
                     <td>Towers<br/>Mines<br/>Headquarters</td>
                 </tr>
             </table>
