--- a/config/statement_en.html
+++ b/config/statement_en.html
@@ -72,8 +72,7 @@
                         <img src="https://i.imgur.com/DzcGk2J.png" alt="tower-protection" style="margin-left:auto; margin-right:auto; width:350px;" /><br/>
                         <figcaption>
                             The tower owned by red protect the nearby cells marked by a grey square. Cells in the diagonal (marked by a black cross) are <strong>not</strong> protected.
-                            Moreover, the blue cell on the right of the tower is not protected as it is not a red cell. Finally, even though the cell on the bottom of the tower is protected, the level <const>2</const> unit
-                            can capture it.
+                            Moreover, the blue cell on the right of the tower is not protected as it is not a red cell.
                         </figcaption>
                     </figure>
                 </li>
