add wood leagues statement + league pop-up. Need link to actual leagues

--- a/config/level4/statement_en_full.html
+++ b/config/level4/statement_en_full.html
@@ -1,5 +1,27 @@
 <div id="statement_back" class="statement_back" style="display:none"></div>
 <div class="statement-body">
+  <!-- LEAGUE ALERT -->
+      <div style="color: #7cc576;
+      background-color: rgba(124, 197, 118,.1);
+      padding: 20px;
+      margin-right: 15px;
+      margin-left: 15px;
+      margin-bottom: 10px;
+      text-align: left;">
+          <div style="text-align: center; margin-bottom: 6px">
+              <img src="//cdn.codingame.com/smash-the-code/statement/league_wood_04.png"/>
+          </div>
+
+          <p style="text-align: center; font-weight: 700; margin-bottom: 6px;">
+              Summary of new rules
+          </p>
+          <span class="statement-league-alert-content">
+              You are now able to <action>BUILD TOWER</action> to protect cells. You now have access to all the rules.<br />
+              See the updated statement for details.
+        </span>
+      </div>
+
+
   <!-- GOAL -->
   <div class="statement-section statement-goal">
     <h1>
