correct tower protection figure with new graphics

--- a/config/level4/statement_en_full.html
+++ b/config/level4/statement_en_full.html
@@ -99,10 +99,9 @@
                     <action>TOWER</action>: towers protect nearby (up, down, left and right, but not diagonals) and <strong>owned</strong> cells (being active or not). Cells protected by a tower can only be reached by enemy units of level <const>3</const>. Likewise, the tower can only be destroyed by a level <const>3</const> unit. A tower costs 15 gold to build.
                     Here is a figure of a tower protection range:
                     <figure style="margin-left:auto; margin-right:auto; width:350px;">
-                        <img src="https://i.imgur.com/DzcGk2J.png" alt="tower-protection" style="margin-left:auto; margin-right:auto; width:350px;" /><br/>
+                        <img src="https://i.imgur.com/WWu1qPB.png" alt="tower-protection" style="margin-left:auto; margin-right:auto; width:350px;" /><br/>
                         <figcaption>
-                            The tower owned by Red protect the nearby cells marked by a grey square. Cells in the diagonal (marked by a black cross) are <strong>not</strong> protected.
-                            Moreover, the blue cell on the right of the tower is not protected as it is not a red cell.
+                            The tower owned by Red protect the nearby cells marked by a black cross. Cells in the diagonal are <strong>not</strong> protected. Moreover, the blue cell on the right of the tower is not protected as it is not a red cell.
                         </figcaption>
                     </figure>
                 </li>
