Workaround for statements images (uploaded externally)

--- a/config/level2/statement_en.html
+++ b/config/level2/statement_en.html
@@ -54,8 +54,8 @@
             <ul>
               <li> void: it is not a playable cell (like a hole or a wall).</li>
               <li> neutral: the cell belongs to no player and is colored in grey.</li>
-              <li> captured: the cell belongs to a player and is of the color of the owner.<img src="../assets/tuile_red02.png"/> <img src="../assets/tuile_blue02.png"/></li>
-              <li> inactive: the cell used to belong to a player but is not connected to this player's territory (see next section). <img src="../assets/tuile_red01.png"/> <img src="../assets/tuile_blue01.png"/></li>
+              <li> captured: the cell belongs to a player and is of the color of the owner.<img src="http://file.azke.fr/tuile_red02.png" style="height:20px;"/> <img src="http://file.azke.fr/tuile_blue02.png" style="height:20px;"/></li>
+              <li> inactive: the cell used to belong to a player but is not connected to this player's territory (see next section). <img src="http://file.azke.fr/tuile_red01.png" style="height:20px;"/> <img src="http://file.azke.fr/tuile_blue01.png" style="height:20px;"/></li>
             </ul>
           </p>
 
@@ -78,7 +78,7 @@
             Players cannot build buildings in this league.<br/>
           </p>
           <p>
-              You start the game with one important building. This is the <img src="../assets/forteresse_red.png"/> <strong>headquarters</strong>. A player has to protect their own headquarters while trying to destroy opponent's one. Losing their headquarters results to a lost game.<br/>
+              You start the game with one important building. This is the <img src="http://file.azke.fr/forteresse_red.png" style="height:20px;"/> <strong>headquarters</strong>. A player has to protect their own headquarters while trying to destroy opponent's one. Losing their headquarters results to a lost game.<br/>
               <br/>
           </p>
 
