--- a/config/level4/statement_en.html
+++ b/config/level4/statement_en.html
@@ -68,8 +68,8 @@
             <ul>
               <li> void: it is not a playable cell (like a hole or a wall).</li>
               <li> neutral: the cell belongs to no player and is colored in grey.</li>
-              <li> captured: the cell belongs to a player and is of the color of the owner.<img src="../assets/tuile_red02.png"/> <img src="../assets/tuile_blue02.png"/></li>
-              <li> inactive: the cell used to belong to a player but is not connected to this player's territory (see next section). <img src="../assets/tuile_red01.png"/> <img src="../assets/tuile_blue01.png"/></li>
+              <li> captured: the cell belongs to a player and is of the color of the owner.<img src="http://file.azke.fr/tuile_red02.png" style="height:20px;"/> <img src="http://file.azke.fr/tuile_blue02.png" style="height:20px;"/></li>
+              <li> inactive: the cell used to belong to a player but is not connected to this player's territory (see next section). <img src="http://file.azke.fr/tuile_red01.png" style="height:20px;"/> <img src="http://file.azke.fr/tuile_blue01.png" style="height:20px;"/></li>
             </ul>
           </p>
 
@@ -94,8 +94,8 @@
           <p>
               There are 2 differents buildings that can be built:
               <ul>
-                <li><img src="../assets/mine_neutre.png"/><action>MINE</action>: mines product gold each turn and are the main source of income. A mine costs (20 + 4*<var>nbMines</var>) to build. So the first costs 20, the second one 24, and so on and so forth. Mines income is always <const>+4</const>. Mines can only be built on neutral mines: these are specific locations in the map. The cell containing a neutral mine must be first controlled before a <action>MINE</action> can be built on it.</li>
-                <li><img src="../assets/tower_red.png"/>
+                <li><img src="http://file.azke.fr/mine_neutre.png" style="height:20px;"/><action>MINE</action>: mines product gold each turn and are the main source of income. A mine costs (20 + 4*<var>nbMines</var>) to build. So the first costs 20, the second one 24, and so on and so forth. Mines income is always <const>+4</const>. Mines can only be built on neutral mines: these are specific locations in the map. The cell containing a neutral mine must be first controlled before a <action>MINE</action> can be built on it.</li>
+                <li><img src="http://file.azke.fr/tower_red.png" style="height:20px;"/>
                     <action>TOWER</action>: towers protect nearby (up, down, left and right, but not diagonals) and <strong>owned</strong> cells (being active or not). Cells protected by a tower can only be reached by enemy units of level <const>3</const>. Likewise, the tower can only be destroyed by a level <const>3</const> unit. A tower costs 15 gold to build.
                     Here is a figure of a tower protection range:
                     <figure style="margin-left:auto; margin-right:auto; width:350px;">
@@ -106,7 +106,7 @@
                     </figure>
                 </li>
               </ul>
-              Another building is the <img src="../assets/forteresse_red.png"/> <strong>headquarters</strong>. A player has to protect their own headquarters while trying to destroy opponent's one. Losing their headquarters results to a lost game.<br/>
+              Another building is the <img src="http://file.azke.fr/forteresse_red.png" style="height:20px;"/> <strong>headquarters</strong>. A player has to protect their own headquarters while trying to destroy opponent's one. Losing their headquarters results to a lost game.<br/>
 
 
 
