--- a/config/level1/statement_en.html
+++ b/config/level1/statement_en.html
@@ -1,27 +1,5 @@
 <div id="statement_back" class="statement_back" style="display:none"></div>
 <div class="statement-body">
-  <!-- LEAGUE ALERT -->
-      <div style="color: #7cc576;
-      background-color: rgba(124, 197, 118,.1);
-      padding: 20px;
-      margin-right: 15px;
-      margin-left: 15px;
-      margin-bottom: 10px;
-      text-align: left;">
-          <div style="text-align: center; margin-bottom: 6px">
-              <img src="//cdn.codingame.com/smash-the-code/statement/league_wood_04.png"/>
-          </div>
-
-          <p style="text-align: center; font-weight: 700; margin-bottom: 6px;">
-              Summary of new rules
-          </p>
-          <span class="statement-league-alert-content">
-              You are now able to <action>BUILD MINE</action> to generate more income. They can be built only on mine spots.<br />
-              See the updated statement for details.
-        </span>
-      </div>
-
-
   <!-- GOAL -->
   <div class="statement-section statement-goal">
     <h1>
@@ -54,8 +32,8 @@
             <ul>
               <li> void: it is not a playable cell (like a hole or a wall).</li>
               <li> neutral: the cell belongs to no player and is colored in grey.</li>
-              <li> captured: the cell belongs to a player and is of the color of the owner.<img src="../assets/tuile_red02.png"/> <img src="../assets/tuile_blue02.png"/></li>
-              <li> inactive: the cell used to belong to a player but is not connected to this player's territory (see next section). <img src="../assets/tuile_red01.png"/> <img src="../assets/tuile_blue01.png"/></li>
+              <li> captured: the cell belongs to a player and is of the color of the owner.<img src="http://file.azke.fr/tuile_red02.png" style="height:20px;"/> <img src="http://file.azke.fr/tuile_blue02.png" style="height:20px;"/></li>
+              <li> inactive: the cell used to belong to a player but is not connected to this player's territory (see next section). <img src="http://file.azke.fr/tuile_red01.png" style="height:20px;"/> <img src="http://file.azke.fr/tuile_blue01.png" style="height:20px;"/></li>
             </ul>
           </p>
 
@@ -75,31 +53,21 @@
           <p><strong>Buildings</strong></p>
 
           <p>
-            Players can <action>BUILD</action> buildings to have more economic or defensive power. A player can only build on owned active and empty cells.<br/>
+            Players cannot build buildings in this league.<br/>
           </p>
           <p>
-              There is, in this league, only 1 building that can be built:
-              <ul>
-                <li><img src="../assets/mine_neutre.png"/><action>MINE</action>: mines product gold each turn and are the main source of income. A mine costs (20 + 4*<var>nbMines</var>) to build. So the first costs 20, the second one 24, and so on and so forth. Mines income is always <const>+4</const>. Mines can only be built on neutral mines: these are specific locations in the map. The cell containing a neutral mine must be first controlled before a <action>MINE</action> can be built on it.</li>
-              </ul>
-              Another building is the <img src="../assets/forteresse_red.png"/> <strong>headquarters</strong>. A player has to protect their own headquarters while trying to destroy opponent's one. Losing their headquarters results to a lost game.<br/>
-
-
-
-              If a building is on an unactive (i.e. not active) cell, it is kept there. A <action>MINE</action> that is on an unactive cell will not provide income.
+              You start the game with one important building. This is the <img src="http://file.azke.fr/forteresse_red.png" style="height:20px;"/> <strong>headquarters</strong>. A player has to protect their own headquarters while trying to destroy opponent's one. Losing their headquarters results to a lost game.<br/>
               <br/>
           </p>
 
           <br/>
           <p><strong>Income</strong></p>
           <p>
-              At the beginning of each turn, a player gain or lose gold based on their income. A player has <const>+1</const> income for each <strong>active</strong> cell owned and <const>+4</const> income for each mine in possession.<br/>
+              At the beginning of each turn, a player gain or lose gold based on their income. A player has <const>+1</const> income for each <strong>active</strong> cell owned.<br/>
 
               Players will have to build units to capture opponent's headquarters. These units cost income (upkeep).
               <ul>
                   <li>Level <const>1</const> units reduce income by <const>1</const>.</li>
-                  <li>Level <const>2</const> units reduce income by <const>4</const>.</li>
-                  <li>Level <const>3</const> units reduce income by <const>20</const>.</li>
               </ul>
               If a player cannot pay their upkeep, all player's units die and the player has <const>0</const> gold for this turn.
           </p>
@@ -109,50 +77,12 @@
           <p>
               To destroy opponent's headquarters, a player has to train armies. Armies are used to capture cells and destroy opponent's buildings and units. <br/>
 
-              There are <const>3</const> levels of units and the higher the level, the stronger the unit is. When a player unit walks on a cell not owned by this player, the cell is <strong>captured</strong>. Also, when a player unit walks on a cell where another enemy unit is, the enemy unit is instantly killed (without harm to the player unit).
+              There are <const>3</const> levels of units and the higher the level, the stronger the unit is. However, in this league, there is only access to level 1 units. When a player unit walks on a cell not owned by this player, the cell is <strong>captured</strong>. Also, when a player unit walks on a cell where another enemy unit is, the enemy unit is instantly killed (without harm to the player unit).
               <ul>
-                <li>Level <const>1</const> units can only move on empty cells, opponent mines or opponent headquarters.</li>
-                <li>Level <const>2</const> units, in addition, can kill level <const>1</const> units</li>
-                <li>Level <const>3</const> units, besides, can kill any units or buildings.</li>
+                <li>Level <const>1</const> units can move on empty cells or opponent headquarters. In this league, they can also kill level 1 units.</li>
             </ul>
 
             If an unit is on an unactive (i.e. not active) cell at the beginning of a turn, the unit is instantly killed.
-
-            Here is a table summary for each units, including their recruitment cost and their impact on income (upkeep):
-
-            <table style="text-align:center; width: 100%; border-spacing: 10px; border-collapse: separate;">
-                <tr>
-                    <th>Level</th>
-                    <td>1</td>
-                    <td>2</td>
-                    <td>3</td>
-                </tr>
-                <tr>
-                    <th>Recruitment cost</th>
-                    <td>10</td>
-                    <td>20</td>
-                    <td>30</td>
-                </tr>
-                <tr>
-                    <th>Upkeep</th>
-                    <td>1</td>
-                    <td>4</td>
-                    <td>20</td>
-                </tr>
-                <tr>
-                    <th>Can kill units level</th>
-                    <td>-</td>
-                    <td>1</td>
-                    <td>1, 2, 3</td>
-                </tr>
-                <tr>
-                    <th>Can destroy</th>
-                    <td>Mines<br/>Headquarters</td>
-                    <td>Mines<br/>Headquarters</td>
-                    <td>Mines<br/>Headquarters</td>
-                </tr>
-            </table>
-
 
 
             <ul>
@@ -216,7 +146,7 @@
       <div class="title">Initialization input</div>
       <div class="text">
         <p><span class="statement-lineno">Line 1: </span>Two ints <var>width</var> and <var>height</var>, the dimensions of the map</p>
-        <p><span class="statement-lineno">Line 2: </span>One int <var>numberMineSpots</var>: the number of mine spots on the map.</p>
+        <p><span class="statement-lineno">Line 2: </span>One int <var>numberMineSpots</var>: the number of mine spots on the map (mines are not used in this league).</p>
         <p><span class="statement-lineno">Next <var>numberMineSpots</var> lines:</span> 2 ints
             <ul>
               <li><var>x</var> and <var>y</var>: coordinates of the mine spot.</li>
@@ -255,8 +185,6 @@
                 <li><var>buildingType</var>: the type of building
                   <ul>
                     <li><const>0</const>: HQ</li>
-                    <li><const>1</const>: Mine</li>
-                    <li><const>2</const>: Tower</li>
                   </ul>
                 </li>
                 <li><var>x</var> and <var>y</var>: building's cell coordinates.
@@ -287,11 +215,10 @@
         <ul>
             <li><action>MOVE id x y</action></li>
             <li><action>TRAIN level x y</action></li>
-            <li><action>BUILD {building-type} x y</action> where the building type can only be <action>MINE</action> in this league.</li>
             <li><action>WAIT</action></li>
 
         </ul>
-        <span class="statement-lineno">Example</span>: "MOVE 1 2 3; TRAIN 3 3 3; BUILD MINE 0 1"<br>
+        <span class="statement-lineno">Example</span>: "MOVE 1 2 3; TRAIN 1 3 3; MOVE 2 3 1"<br>
         <br>
       </div>
     </div>
