added basic welcome popups

--- a/config/level2/welcome_en.html
+++ b/config/level2/welcome_en.html
@@ -1,1 +1,7 @@
-<div></div>
+<div style="text-align: center">
+  <h2>You've made it to the next league</h2>
+  You are now able to <keyword>TRAIN</keyword> level 2 and 3 units.
+  <div><img /></div>
+  Level 1 units cannot kill level 1 units anymore.
+  <div class="small">See the updated statement for details.</div>
+</div>
