--- a/config/level3/welcome_en.html
+++ b/config/level3/welcome_en.html
@@ -1,1 +1,7 @@
-<div></div>>
+<div style="text-align: center">
+  <h2>You've made it to the next league</h2>
+  You are now able to <keyword>BUILD MINE</keyword> to generate more income.
+  <div><img /></div>
+  They can be built only on mine spots.
+  <div class="small">See the updated statement for details.</div>
+</div>
