--- a/config/level4/welcome_en.html
+++ b/config/level4/welcome_en.html
@@ -1,1 +1,7 @@
-<div></div>
+<div style="text-align: center">
+  <h2>You've made it to the next league</h2>
+  You are now able to <keyword>BUILD TOWER</keyword> to protect cells.
+  <div><img /></div>
+  You now have access to all the rules.
+  <div class="small">See the updated statement for details.</div>
+</div>
